# theBIGbam

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TEST.md  TODO.md  TODO.txt  add_variable.py  calculating_data.py  colors_for_genbank.py  constants.py  generate_database.py  generating_test_sets.md  main.py  mgfeatureviewer_env.yaml  mgviewer.css  plotting_data.py  plotting_data_all_samples.py  plotting_data_per_sample.py  plotting_features.py  pyproject.toml  start_bokeh_server.py  thebigbam_env.yaml
analysis/: CDS_mapping_patterns_per_contig_per_sample.py
docs/: ASSEMBLY_CHECK.md  CIRCULAR_MAPPING.md  COMPRESSION.md  DATABASE.md  DATABASE_STRUCTURE.md  DEVELOPERS_NOTE.md  FEATURES.md  FEATURES_EXPLANATION.md  FILTERS.md  INSTALL.md  METRICS.md  MISALIGNMENT.md  PHAGE_PACKAGING.md  PLOT_INTERPRETATION.md  PREPROCESSING.md  UPDATE.md  USAGE.md  VISUALIZATION.md
mgfeatureviewer/: __init__.py  add_variable.py  calculating_data.py  cli.py  data_accessor.py  plotting_data_all_samples.py  plotting_data_per_sample.py  read_mapping.py  slurm_utils.py  start_bokeh_server.py
src/: bam_reader.rs  blob.rs  cigar.rs  circular.rs  compress.rs  db.rs  features.rs  gc_content.rs  genbank.rs  lib.rs  mag_blob.rs  main.rs  parser.rs  processing.rs  processing_completeness.rs  processing_phage_packaging.rs  types.rs
static/: bokeh_styles.css
tests/: 5000_read_pairs_for_test_10kbp_concatenated_100_times_R1.fastq  5000_read_pairs_for_test_10kbp_concatenated_100_times_R2.fastq  conftest.py  test_coverages.py  test_mapping.py
thebigbam/: cli.py
tmp/: OBSERVATION.md  (+3 more)
(+72 files in other folders)
