[package]
name = "thebigbam_calc"
version = "0.1.1"
edition = "2021"
description = "Compression and interactive exploration of large-scale sequencing alignments with circular mapping support"
license = "MIT"
repository = "https://github.com/bhagavadgitadu22/theBIGbam"
authors = ["Martin Boutroux <martinboutroux@outlook.fr>"]

[lib]
name = "thebigbam_rs"
crate-type = ["cdylib", "rlib"]

# Binary removed - use Python CLI instead: thebigbam calculate ...
# (Python CLI calls Rust via PyO3 bindings, avoiding duplicate argument parsing)

[features]
default = []
python = ["pyo3"]

[dependencies]
# BAM/SAM reading
rust-htslib = { version = "0.51", default-features = false }

# Parallelism
rayon = "1.10"

# GenBank parsing
gb-io = "0.9"

# Error handling
anyhow = "1"

# Progress and logging
indicatif = "0.17"
atty = "0.2"

# DuckDB for metadata.db (columnar, better compression)
duckdb = { version = "1.1", features = ["bundled"] }

# Statistics (Poisson test for phage packaging peak significance)
statrs = "0.18"

# Date/time formatting for metadata
chrono = "0.4"

# Temp files for autoblast
tempfile = "3"

# PyO3 bindings (optional, enabled via "python" feature)
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39", "anyhow"], optional = true }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
